--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -666,8 +666,8 @@ footer.sticky-bottom {
   }
 
   h2.bibliography {
-    color: $black-color;
-    border-top: 1px solid $black-color;
+    color: var(--global-text-color);
+    border-top: 1px solid var(--global-text-color);
     padding-top: 1rem;
     margin-top: 2rem;
     text-align: right;
