--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -7,7 +7,7 @@
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
-  --global-theme-color: #00A3A3;
+  --global-theme-color: #00a3a3;
   --global-hover-color: #007575;
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-dark};
