Apply aesthetic changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,19 @@
     <div class="container">
       {% if page.permalink != '/' -%}
       <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl }}/">
-        {%- if site.title == "blank" -%} {%- if site.first_name -%} {{- site.first_name -}}&nbsp; {%- endif -%} {%- if site.middle_name -%}
-        <span class="font-weight-bold">{{- site.middle_name -}}&nbsp;</span>
-        {%- endif -%} {%- if site.last_name -%} {{- site.last_name -}} {%- endif -%} {%- else -%} {{- site.title -}} {%- endif -%}
+        {%- if site.title == "blank" -%}
+          {%- if site.first_name -%}
+            {{- site.first_name -}}
+          {%- endif -%}
+          {%- if site.middle_name -%}
+            <span class="font-weight-bold">{{- site.middle_name -}}</span>
+          {%- endif -%}
+          {%- if site.last_name -%}
+            {{- site.last_name -}}
+          {%- endif -%}
+        {%- else -%}
+          {{- site.title -}}
+        {%- endif -%}
       </a>
       {%- elsif site.enable_navbar_social -%}
       <!-- Social Icons -->
@@ -34,36 +44,26 @@
 
           <!-- About -->
           <li class="nav-item {% if page.permalink == '/' %}active{% endif %}">
-            <a class="nav-link" href="{{ '/' | relative_url }}"
-              >{{ about_title }} {%- if page.permalink == '/' -%}
+            <a class="nav-link" href="{{ '/' | relative_url }}">{{ about_title }} {%- if page.permalink == '/' -%}
               <span class="sr-only">(current)</span>
               {%- endif -%}
             </a>
           </li>
-          {% if site.blog_nav_title %}
-          <!-- Blog -->
-          <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
-            <a class="nav-link" href="{{ '/blog/' | relative_url }}"
-              >{{ site.blog_nav_title }} {%- if page.url contains 'blog' -%}
-              <span class="sr-only">(current)</span>
-              {%- endif -%}
-            </a>
-          </li>
-          {%- endif %}
 
-          <!-- Other pages -->
-          {%- assign sorted_pages = site.pages | sort: "nav_order" -%} {%- for p in sorted_pages -%} {%- if p.nav and p.autogen == nil -%} {%- if
-          p.dropdown %}
-          <li class="nav-item dropdown {% if page.title == p.title %}active{% endif %}">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-              >{{ p.title }} {%- if page.title == p.title -%}
+              <!-- Other pages -->
+              {%- assign sorted_pages = site.pages | sort: "nav_order" -%}
+              {%- for p in sorted_pages -%}
+              {%- if p.nav and p.autogen == nil -%}
+              {%- if p.dropdown %}
+              {%- assign has_active_child = false -%}
+              {%- for child in p.children -%}
+              {%- if page.title == child.title -%}
+              {%- assign has_active_child = true -%}
+              {%- endif -%}
+              {%- endfor -%}
+              <li class="nav-item dropdown {% if page.title == p.title or has_active_child %}active{% endif %}">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ p.title }}
+                  {%- if page.title == p.title or has_active_child -%}
               <span class="sr-only">(current)</span>
               {%- endif -%}
             </a>
@@ -71,14 +71,19 @@
               {%- for child in p.children -%} {%- if child.title == 'divider' %}
               <div class="dropdown-divider"></div>
               {%- else %}
-              <a class="dropdown-item" href="{{ child.permalink | relative_url }}">{{ child.title }}</a>
+                  <a class="dropdown-item {% if page.title == child.title %}active{% endif %}" href="{{ child.permalink | relative_url }}">{{ child.title }}</a>
               {%- endif -%} {% endfor %}
             </div>
           </li>
           {%- else %}
-          <li class="nav-item {% if page.title == p.title %}active{% endif %}">
-            <a class="nav-link" href="{{ p.url | relative_url }}"
-              >{{ p.title }} {%- if page.title == p.title -%}
+              <li class="nav-item {% if page.url contains p.permalink %}active{% endif %}">
+                {%- if p.permalink contains '/blog/' %}
+                {%- assign url = '/blog/' -%}
+                {%- else -%}
+                {%- assign url = p.url -%}
+                {%- endif -%}
+                <a class="nav-link" href="{{ url | relative_url }}">{{ p.title }}
+                  {%- if page.url contains p.url -%}
               <span class="sr-only">(current)</span>
               {%- endif -%}
             </a>
