--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -18,6 +18,17 @@
   </div>
   {%- endif -%}
 
+  {% if entry.keywords %}
+  <div class="pub-tags">
+    {% assign tags = entry.keywords | split: "," %}
+    {% for tag in tags %}
+      <span class="pub-tag badge badge-pill">
+        {{ tag | strip }}
+      </span>
+    {% endfor %}
+  </div>
+  {% endif %}
+
   <!-- Entry bib key -->
   <div id="{{entry.key}}" class="{% if site.enable_publication_thumbnails %}col-sm-8{% else %}col-sm-10{% endif %}">
     <!-- Title -->
