--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -888,6 +888,13 @@ footer.sticky-bottom {
   }
 }
 
+.tldr {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  font-size: 0.9rem;
+  color: var(--global-text-color-light);
+}
+
 // Rouge Color Customization
 figure.highlight {
   margin: 0 0 1rem;
