--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -75,7 +75,7 @@ layout: default
   {% endif %}
 
   {% if page.related_publications %}
-    <h2>References</h2>
+    <h2>references</h2>
     <div class="publications">
       {% bibliography --group_by none --cited_in_order %}
     </div>
