--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -732,7 +732,7 @@ footer.sticky-bottom {
 
   h2.bibliography {
     color: var(--global-text-color);
-    border-top: 1px solid var(--global-text-color);
+    border-top: .125px solid var(--global-text-color);
     padding-top: 1rem;
     margin-top: 2rem;
     text-align: right;
